<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Navigation -->    
    <string name="header">utente</string>    
        
    <string name="app_name">My Fashion Assistant</string>
    <string name="clear"></string>
    <string name="add">aggiungere</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="congratulation">Congratulation you look so good</string> 
    <string name="notwelldressed">Your are not well dressed we advice you to choose other clothes</string>  
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>
    <string name="save_image">Save Image</string>
    <string name="list_image">List of images</string>
    <string name="titulo_user">Gassoumi Achref</string>
    <string name="subtitulo_user">yassine.kharraz@gmail.com</string>   
	<string name="no_network">Network connection problem</string>
    <string name="tab_one">Todays weather</string>
    <string name="tab_two">Todays look</string>
     
    
    <string name="fragment_my_apps">This is My Assistance</string>    
    <string name="fragment_shop_apps">This is ShopApps</string>
    <string name="fragment_tab_one">This is One</string>    
    <string name="fragment_tab_two">This is Two</string>
    <string name="fragment_tab_three">This is Three</string>  
    <string name="dress_fragment">Dress Fragment</string>
	<string name="assistance_resultat">Assistant Result :</string>
    <string name="coat_fragment">Choose your Coat</string>
    <string name="accessories_fragment">Choose your Accessories</string>
    <string name="action_settings">Settings</string>
    <string name="assisstance">My assisstance</string>
   <string name="assisstancewelcome">Hello Im your Assitant ! What are you going to do today ?</string>
    <string name="job">Job</string>
    <string name="meeting">Meeting</string>
    <string name="party">Party</string>
    <string name="casual">Casual</string>
    <string name="sport">Sport</string>
    <string name="gass_event">Casual</string>
    <string name="shoose_apper_body">Choose your Upper Body</string>
    <string name="shoes_fashion">Choose your Shoes</string>
    <string name="choose_lower">Choose your Lower Body</string>
    <string name="calendrier_ach">No Assistant found</string>
    
    <string name="change_city">Change city</string>
    <string name="finish_fragment_txt">you are taking these clothes</string>
 
    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>
     
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
     
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
     
    <string name="place_not_found">no weaher found. No connection !!</string>   
    
    <string name="sel_date">%s</string>
    <string name="facebook_app_id">936046706423670</string> 
    <string name="share">Share</string>
    <string name="review">Review</string>

    <string name="geo_status_searching">Waiting GPS &#8230;</string>
    <string name="geo_status_found">Location found</string>
    <string name="geo_status_location">%1$s \n(%2$s)</string>

    <string-array name="image_photo_sources">
        <item>Pick from gallery</item>
        <item>Capture new photo</item>
    </string-array>
    
    
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
	<string name="refresh">Click to refresh</string>    
    <string name="submit_confirm_message">Place the order with the deli? You will receive an email
        confirmation.</string>
    <string name="submit_confirm_button">Place order</string>

    <string name="label_your_name">Name</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_email">Optional</string>
</resources >